feat(TOB-6073): gjør org navn og bankkontonr tilgjengelig ved henting av rapport metadata
