# src/main/resources/openapi/rapport-v1.yaml
@@ -284,6 +284,10 @@ components:
         datoValutert:
           type: "string"
           format: "date"
+        bankkonto:
+          type: "string"
+        navn:
+          type: "string"
         opprettet:
           $ref: "#/components/schemas/Instant"
         arkivert:
